--- a/.env
+++ b/.env
@@ -9,12 +9,14 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=data_pkk_db
-DB_USERNAME=root
-DB_PASSWORD=
+mysql_URL="postgres://default:ZRna30CUxiwB@ep-old-queen-a4e6797d-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+mysql_PRISMA_URL="postgres://default:ZRna30CUxiwB@ep-old-queen-a4e6797d-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+mysql_URL_NO_SSL="postgres://default:ZRna30CUxiwB@ep-old-queen-a4e6797d-pooler.us-east-1.aws.neon.tech:5432/verceldb"
+mysql_URL_NON_POOLING="postgres://default:ZRna30CUxiwB@ep-old-queen-a4e6797d.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+mysql_USER="default"
+mysql_HOST="ep-old-queen-a4e6797d-pooler.us-east-1.aws.neon.tech"
+mysql_PASSWORD="ZRna30CUxiwB"
+mysql_DATABASE="verceldb"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
