--- a/.env
+++ b/.env
@@ -9,12 +9,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_PORT=5432
 DB_DATABASE=data_pkk_db
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=postgres
+DB_PASSWORD=fahrezee233
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -32,8 +32,8 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=ce4f81ce9896f4
-MAIL_PASSWORD=e9ce138023273f
+MAIL_USERNAME=b3bd2b8ebd2825
+MAIL_PASSWORD=25e8e93361ac40
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
