--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "autoprefixer": "^10.4.17",
-        "axios": "^1.6.4",
-        "laravel-vite-plugin": "^1.0.0",
+        "autoprefixer": "^10.4.19",
+        "axios": "^1.6.8",
+        "laravel-vite-plugin": "^1.0.2",
         "postcss": "^8.4.33",
-        "tailwindcss": "^3.4.1",
-        "vite": "^5.0.0"
+        "tailwindcss": "^3.4.3",
+        "vite": "^5.2.10"
+    },
+    "dependencies": {
+        "debug": "^4.3.4",
+        "uuid": "^9.0.1"
     }
 }
